--- a/index.html
+++ b/index.html
@@ -899,6 +899,12 @@ background-color: var(--body-bg) !important;
         </div>
     </section>
   <!-- END MESSEGER -->
+
+  <div style="padding: 30px;">
+      <h4 class="title-font text-black uk-text-bold uk-text-center" style="margin-top: 100px;">Gửi quà cô dâu chú rể</h4>
+      <img style="margin-top: 20px;" fetchpriority="high" decoding="async" class="alignnone size-medium wp-image-2119" src="images/UJyc8mYs3z96ZaLU3cEwX82fCQh37QjaCLAgDBZl.jpg" alt="" width="100%" height="300">
+  </div>
+
   
   <!-- GIFT -->
   <div class="uk-position-fixed uk-position-bottom-right uk-position-small" style="bottom: 4rem">
